# lexika

./: .gitignore  CONTRACT.md  DEPLOYMENT.md  PRIVACY.md  README.md  TERMS.md  deploy_web.sh  docker-compose.yml  render.yaml
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: app_shell.dart  main.dart
app/lib/api/: api_client.dart  demo_data.dart  models.dart  providers.dart
app/lib/features/admin/: admin_screen.dart
app/lib/features/auth/: auth_screen.dart
app/lib/features/decks/: deck_detail_screen.dart  decks_screen.dart
app/lib/features/games/: games_screen.dart
app/lib/features/lookup/: entry_card.dart  lookup_screen.dart  relations_panel.dart  word_detail_screen.dart
app/lib/features/profile/: profile_screen.dart
app/lib/features/progress/: class_detail_screen.dart  class_module.dart  (+2 more)
app/lib/theme/: app_colors.dart  app_theme.dart
app/lib/widgets/: app_button.dart  app_card.dart  app_chip.dart  bottom_nav.dart  bounce_press.dart  empty_state.dart  fade_up.dart  glass_surface.dart  mode_tabs.dart  play_button.dart  section_label.dart  sfx.dart  top_bar.dart  tts.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/tool/: gen_sfx.py
app/web/: index.html  manifest.json
backend/: .dockerignore  Dockerfile  README.md  add_words.py  auth.py  backfill_translations.py  db.py  gamify.py  lookup.py  main.py  models.py  pyproject.toml  sample_words.csv  seed.py  seed_catalogue.py  sm2.py  test_auth.py  test_classes.py  test_phase5.py  test_phase7.py  test_phase8.py  translate.py
(+6 files in other folders)
