[project]
name = "lexika-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2",
    "uvicorn>=0.49.0",
]
